--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 
-/*
+
 .App {
   text-align: center;
+  height: 100%;
 }
 
 
@@ -16,7 +17,7 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-*/
+
 
 .telNumber {
 	float: left;
@@ -37,11 +38,16 @@
 	
 }
 
-.Note{
+ .Note{
     float: left;
 	width:25%;
 
-}
+} 
+
+/* input{
+	float: left;
+	width:25%;
+}	 */
 
 #search{
 	position: relative;
@@ -52,42 +58,75 @@
 	
 	position: relative;
     left: 30px;
-}
- /* .Navigation{
+} 
+
+/*  .Navigation{
   	width: 100%;
   }
-*/
+ */
+
 .UserMode{
 	background-color:green;
 	width:100%;
-	height:600px;
+	height:100%;
 	border-color:red;
 	
 }
+
 .Control{
         width:100%;
-		height:30%;
+	height:30%;
 
 }	
 .UserNav {
         width: 60%;
-		height:100%;
+	height:100%;
         float: left;
-		background-color:yellow;
+	background-color:yellow;
 
 }
 
 .Login{
     width: 40%;
-	height:100%;
+    height:100%;
     float: left;
-	background-color:red;
+    background-color:red;
 }
-
+/*
 .Output{
    float: left;
-   
+   height:5%;
    width:100%;
    background-color:blue;
 
+}
+*/
+  
+
+.header {
+  width: 100%;
+  background-color: #f4e04d;
+  min-height: 10vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: #10375c;
+}
+
+.stock-container {
+  padding-left: 3em;
+  padding-right: 3em;
+  margin-top: 3em;
+}
+
+table {
+  display: flex;
+  justify-content: center;
+  border: 1px solid gray;
+}
+td {
+  border: 1px solid gray;
+  width: 30em;
 }
