Adding table to output

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
-
+*{
+ /* display: flex; */
+ /*   box-sizing: border-box; */
+}
 
 .App {
+  /*display: flex; */
+  
   text-align: center;
   height: 100%;
 }
@@ -65,14 +70,14 @@
   }
  */
 
-.UserMode{
+/* .UserMode{
 	background-color:green;
 	width:100%;
 	height:100%;
 	border-color:red;
 	
 }
-
+ */
 .Control{
         width:100%;
 	height:30%;
@@ -92,7 +97,7 @@
     float: left;
     background-color:red;
 }
-/*
+/* 
 .Output{
    float: left;
    height:5%;
@@ -100,7 +105,7 @@
    background-color:blue;
 
 }
-*/
+ */
   
 
 .header {
@@ -121,7 +126,7 @@
   margin-top: 3em;
 }
 
-table {
+{/*table {
   display: flex;
   justify-content: center;
   border: 1px solid gray;
@@ -129,4 +134,4 @@ table {
 td {
   border: 1px solid gray;
   width: 30em;
-}
+}  */}
