--- a/src/App.css
+++ b/src/App.css
@@ -113,6 +113,12 @@
 
 }
 
+.ModifierOutput {
+   display: flex;
+   width: 100%;
+   height:70%;
+   background-color:orange;
+}
 .Login{
     width: 40%;
     height:100%;
@@ -176,4 +182,14 @@ td {
 #adminbutton {
  position: relative;
   left: 30px;
+}
+
+#descriptioninput {
+ width:50%;
+
+}
+
+#notesinput {
+  width:50%;
+  float:left;
 }  
