--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 }
 
 .App {
-  /*display: flex; */
+  display: flex;
   
   text-align: center;
   height: 100%;
@@ -95,6 +95,11 @@
         width:100%;
 	height:30%;
 
+}
+
+.AdminControl{
+        width:100%;
+        height:100%;
 }	
 .UserNav {
         width: 60%;
@@ -107,7 +112,7 @@
 .AdminNav {
         display: flex;
         width: 60%;
-	height:100%;
+	height:30%;
         float: left;
 	background-color:yellow;
 
@@ -121,20 +126,17 @@
 }
 .Login{
     width: 40%;
-    height:100%;
+    height:30%;
     float: left;
     background-color:red;
 }
-/* 
-.Output{
-   float: left;
-   height:5%;
-   width:100%;
-   background-color:blue;
 
+.LogOut{
+    width:40;
+    height:30%;
+    float:left;
+    background-color:red;
 }
- */
-  
 
 .header {
   width: 100%;
@@ -153,16 +155,6 @@
   padding-right: 3em;
   margin-top: 3em;
 }
-
-{/*table {
-  display: flex;
-  justify-content: center;
-  border: 1px solid gray;
-}
-td {
-  border: 1px solid gray;
-  width: 30em;
-}  */}
 
 .formcolum {
    background-color:blue;
@@ -184,12 +176,18 @@ td {
   left: 30px;
 }
 
-#descriptioninput {
- width:50%;
+.descriptioninput {
+  position: relative;
+  left: 10%;
+  top:  10%;
+  width:50%;
 
 }
 
-#notesinput {
+.notesinput {
+  position:relative;
+  left:5%;
+  top: 10%;
   width:50%;
   float:left;
 }  
